# nps-score

./: LICENSE  README.md  docker-compose.yml  nps-score.code-workspace
back-end/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
back-end/ tests/: conftest.py
back-end/ tests/test_repositories/: test_company_repository.py  test_response_repository.py
back-end/ tests/test_routes/: test_companies.py  test_nps_service.py  test_responses.py
back-end/alembic/: env.py
back-end/alembic/versions/: 1b7050c269b2_initial_migration.py  dfe56957baa2_add_cascade_delete_to_responses.py
back-end/app/: main.py
back-end/app/api/routes/: companies.py  company.py  reports.py  responses.py
back-end/app/core/: config.py  exceptions.py  logging.py
back-end/app/models/: company.py  init.py  response.py
back-end/app/repositories/: __init__.py  company_repository.py  response_repository.py
back-end/app/schemas/: company.py  init.py  response.py
back-end/app/services/: init.py  nps_service.py
back-end/tests/: conftest.py
back-end/tests/test_repositories/: test_company_repository.py  test_response_repository.py
back-end/tests/test_routes/: test_companies.py  test_nps_service.py  test_responses.py
front-end/: .dockerignore  .env.local.example  .eslintrc.json  .gitignore  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  tsconfig.json
front-end/__tests__/utils/: test-utils.tsx
front-end/app/: NpsFormClient.tsx  layout.tsx  page.tsx
front-end/components/: CompanyForm.tsx  DataTable.tsx  Footer.tsx  LoginForm.tsx  Navbar.tsx  Notification.tsx  NpsBadge.tsx  ResponseForm.tsx  Stars.tsx
front-end/lib/: api.ts  nps.ts  queryClient.ts
front-end/providers/: ReactQueryProvider.tsx
front-end/services/: companies.service.ts  nps.service.ts  responses.service.ts
front-end/theme/: theme.ts
front-end/types/: company.ts  nps.ts  response.ts  theme.d.ts
mock-server/: db.json  package-lock.json  package.json  routes.json  server.js
(+24 files in other folders)
